# transcribe-bot

./: .env.example  .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  start  tsconfig.json
asr_server/: pyproject.toml  server.py
src/: commands.ts  deploy-commands.ts  env.ts  guilds.ts  index.ts  session-manager.ts  summarizer.ts  transcriber.ts
src/types/: prism-media.d.ts
test/: summary.integration.test.ts
