[project]
name = "transcribe-bot-doc-tools"
version = "0.1.0"
description = "Local Python document tooling for Codex-generated transcript summaries."
requires-python = ">=3.12"
dependencies = [
  "lxml>=6.0.0",
  "pdfplumber>=0.11.8",
  "pdf2image>=1.17.0",
  "pillow>=12.0.0",
  "pypdf>=6.4.0",
  "python-docx>=1.2.0",
  "reportlab>=4.4.5"
]
